-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
Recovery can not finish in time during 24 hours failover test, after 23 times failover
Server failover period: 600 seconds Exited after: 13229 seconds Number of failovers before exit: mds1: 2 times mds2: 7 times mds3: 1 times mds4: 1 times mds5: 3 times mds6: 3 times mds7: 3 times mds8: 3 times ost1: 0 times ost2: 0 times ost3: 0 times ost4: 0 times Status: FAIL: rc=7
- is related to
-
LU-6831 The ticket for tracking all DNE2 bugs
-
- Reopened
-