LU-6880 update: after reply move dtrq to finish list

update replay request (dtrq) will be moved to a replay
finish list after update replay is finished, so if
client send the replay request with the same transno,
it can check if the request has been redone by update
replay.

And same as normal replay, update replay should also
update obd_next_recovery_transno.

Add 70c replay single test cases to verify this.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I2fae2a6f8264f55d069997e23a50e71b6a9f39db
Reviewed-on: http://review.whamcloud.com/15682
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>